--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -26,7 +26,6 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,17 +34,16 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18.18.2
           cache: "yarn"
 
-      - name: Install NPM Packages
-        run: yarn install
-      - name: Run test
-        run: yarn test
-      - name: Build project
-        run: yarn build
+      - name: Install, test and build
+        run: |
+          yarn install
+          yarn test
+          yarn build
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -56,15 +54,12 @@ jobs:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Download the artifact
-        uses: actions/download-artifact@v3
-        with:
-          path: "./build"
 
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
